--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -16,5 +16,13 @@
         android:key="Sanntidsdata"
         android:summary="Antall busser som skal vise"
         android:title="Bussantall" />
+    
+    <EditTextPreference
+        android:defaultValue="10"
+        android:inputType="number"
+        android:dialogTitle="Antall stopp"
+        android:key="Stops"
+        android:summary="Antall mest brukte stopp"
+        android:title="Stoppantall" />
 
 </PreferenceScreen>
