--- a/res/menu/activity_bus_stop.xml
+++ b/res/menu/activity_bus_stop.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
-    <item android:id="@+id/favourite_button"
+    <!-- <item android:id="@+id/favourite_button"
           android:title="Test"
-          android:showAsAction="always" />
+          android:showAsAction="always" />  -->
 </menu>
